--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: slyfy27 Blog
 subtitle: A blogging framework for iOS.
 author: slyfy27
 simple_search: https://www.baidu.com/search
-description:iOS Blog
+description: iOS Blog
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -52,6 +52,7 @@ titlecase: true       # Converts page and post titles to titlecase
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+# default_asides: [asides/recent_posts.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -64,31 +65,31 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:slyfy27
+github_user: slyfy27
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 
 # Pinboard
-pinboard_user:
-pinboard_count: 3
+# pinboard_user:
+# pinboard_count: 3
 
 # Delicious
-delicious_user:
-delicious_count: 3
+# delicious_user:
+# delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+# disqus_short_name:
+# disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+# google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: false
+# facebook_like: false
 
 # sinaBlog
-weibo_user: slyfy27 # 微博数字 ID 或域名 ID
+weibo_user: itstud # 微博数字 ID 或域名 ID
 dribbble_user: 
 weibo_share: true # 是否开启微博分享按钮
