--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://slyfy27.github.io
+url: http://slyfy27.github.com
 title: slyfy27 Blog
-subtitle: A blogging framework for iOS.
+subtitle: A blog for iOS.
 author: slyfy27
 simple_search: https://www.baidu.com/search
 description: iOS Blog
@@ -66,7 +66,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 
 # Github repositories
 github_user: slyfy27
-github_repo_count: 0
+github_repo_count: 1
 github_show_profile_link: true
 github_skip_forks: true
 
